--- a/package.json
+++ b/package.json
@@ -7,15 +7,28 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "electron": "^11.1.1",
+    "formik": "^2.2.6",
+    "gulp-sass": "^4.1.0",
+    "moment": "^2.29.1",
     "owl.carousel": "^2.3.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-confirm-alert": "^2.6.2",
+    "react-datepicker": "^3.3.0",
+    "react-dom": "^16.14.0",
+    "react-modal-video": "^1.2.6",
     "react-owl-carousel": "^2.3.1",
-    "react-redux": "^7.2.1",
+    "react-player": "^2.7.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
+    "react-slick": "^0.27.13",
+    "reactjs-percentage-circle": "^1.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "start": "^5.1.0",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "@babel/plugin-transform-react-jsx": "^7.12.11",
+    "node-sass": "^5.0.0"
   }
 }
